refactor : 전체적인 개선  - DTO Record 타입 전환  - 백테스트 호출 개선  - 설정 파일 및 문서 정리